# nfcbot

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml
.toolforge/: cronjobs.yaml
.toolforge/jobs/: orphan-revs-tagger  recent-vios  reduce-tagger
src/nfcbot/: __init__.py  bot.py  cache.py  cli.py  page.py
