[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"


[project]
authors = [
    { name = "JJMC89" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Wiki",
    "Typing :: Typed",
]
dependencies = [
    "mwparserfromhell == 0.7.2",
    "pywikibot [mwoauth, mysql] == 10.3.2",
    "pywikibot-extensions == 24.9.21",
]
description = "Non-free content bot"
keywords = [ "bot", "NFC", "NFCC", "non-free", "wikipedia" ]
license = { text = "MIT" }
name = "nfcbot"
readme = "README.md"
requires-python = ">=3.11"
version = "0.4.0"

[project.scripts]
nfcbot = "nfcbot.cli:cli"

[project.urls]
source = "https://github.com/jjmc89-bot/nfcbot"


[tool.black]
target-version = ["py311"]
line-length = 79  # default: 88


[tool.isort]
add_imports = ["from __future__ import annotations"]
atomic = true
lines_after_imports = 2
profile = "black"
py_version = 311


[tool.mypy]
python_version = 3.11
enable_error_code = [
    "ignore-without-code",
]
strict = true
disallow_subclassing_any = false
warn_return_any = false

[[tool.mypy.overrides]]
module = [
    "pywikibot.*",
]
ignore_missing_imports = true


[tool.poetry]

[tool.poetry.dependencies]
python = "^3.11"
